# joey-minimal-gpt2

./: .gitignore  ARCHITECTURE_NOTES.md  README.md  config.py  config_v1.py  config_v2.py  config_v3.py  data.py  eval_hellaswag.py  eval_hellaswag_v1.py  eval_hellaswag_v2.py  eval_hellaswag_v3.py  model.py  model_v1.py  model_v2.py  model_v3.py  pyproject.toml  sample.py  sample_v1.py  sample_v2.py  sample_v3.py  train.py  train_v1.py  train_v2.py  train_v3.py  utils.py
docs/: 01-architecture.md  02-data-pipeline.md  03-training-recipe.md  04-hardware-5090.md  05-eval-and-sampling.md
docs/superpowers/plans/: 2026-05-10-minimal-gpt2.md
docs/superpowers/specs/: 2026-05-10-minimal-gpt2-design.md
learnings/: abbreviations.md  attention-variants.md  attention.md  embedding.md  modern-trends.md  tokenizer.md  training-data.md  transformer-block.md
scripts/: prep_fineweb_edu.py  prep_shakespeare.py
tests/: test_config.py  test_data.py  test_model.py  test_smoke_train.py  test_utils.py
